# AutoMailSender

./: .gitignore  CMakeLists.txt  README.md
database/: database.db  database.dia  database.dia~
include/: database.h
include/core/: database.h  parser.h
include/network/: authentication.h  network.h
include/ui/: dappeals.h  dcoredata.h  mainwindow.h  wmessages.h  wpeoples.h  wsending.h
res/ui/: dappeals.ui  dcoredata.ui  mainwindow.ui  wmessage.ui  wpeoples.ui  wsending.ui
src/: database.cpp  main.cpp  mainwindow.cpp
src/core/: database.cpp  parser.cpp
src/network/: authentication.cpp  network.cpp
src/ui/: dappeals.cpp  dcoredata.cpp  mainwindow.cpp  wmessages.cpp  wpeoples.cpp  wsending.cpp
